--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "description": "Generate typed API clients from OpenAPI specifications",
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "bin": {
     "opencodegen": "./dist/cli/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "start": "node dist/cli/index.js"
@@ -19,11 +30,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "tsx": "^4.21.0",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
+    "openapi-types": "^12.1.3",
     "typescript": "^5.7.2"
   },
   "engines": {
