--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/cli/index.js"
+    "dev": "bun src/cli/index.ts",
+    "build": "bun build src/cli/index.ts --outfile dist/cli/index.js --target node",
+    "build:types": "tsc --emitDeclarationOnly",
+    "typecheck": "tsc --noEmit",
+    "test": "bun test"
   },
   "keywords": [
     "openapi",
@@ -31,15 +34,11 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.3.0",
-    "tsx": "^4.21.0",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
+    "@types/bun": "latest",
     "openapi-types": "^12.1.3",
-    "typescript": "^5.7.2"
-  },
-  "engines": {
-    "node": ">=22.0.0"
+    "typescript": "^5.9.3"
   }
 }
